--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Uday Kiran Bakka, K Siddu Roy , P Naresh",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
