--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "online_food_delivery_system",
   "version": "1.0.0",
   "description": "Website which enables the students of campus to order food from campus canteen",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -11,8 +11,17 @@
   "author": "Uday Kiran Bakka, K Siddu Roy , P Naresh",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.3",
-    "express": "^4.17.1"
+    "body-parser": "^1.14.1",
+    "connect-flash": "^0.1.1",
+    "ejs": "^2.3.4",
+    "express": "^4.13.3",
+    "express-session": "^1.11.3",
+    "method-override": "^2.3.5",
+    "mongoose": "^5.9.22",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^3.1.0",
+    "request": "^2.65.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
